--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "proxy":"http://localhost:8080"
   },
   "scripts": {
     "start": "react-scripts start",
