--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.3",
+    "jest-webpack-resolver": "^0.3.0",
+    "proxy": "http://localhost:8080",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "web-vitals": "^2.1.4",
-    "proxy":"http://localhost:8080"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,4 +45,6 @@
   "devDependencies": {
     "jest-watch-typeahead": "^0.6.5"
   }
+
+  
 }
